# erasmo

api_excercise/: README.md  pyproject.toml
api_excercise/api_excercise/: check_bigquery_table.py  check_cloud_storage.py  main.py
api_excercise/tests/: test_check_functions.py
pubsub_app/: README.md  pyproject.toml  pytest.ini
pubsub_app/pubsub_app/: config.py  main.py  pubsub_manager.py
pubsub_app/tests/: conftest.py  test_pubsub_manager.py
rhombus_area/: README.md  diagram.excalidraw  pyproject.toml
rhombus_area/rhombus_area/: geometric_shape.py  main.py  rhombus.py  utils.py
rhombus_area/tests/: test_main.py
